Revision history for Data-SearchEngine-ElasticSearch

{{$NEXT}}

0.04 Oct 21 2011
  * Include item in ElasticSearch.pm to prevent runtime errors.

0.03 Jul 17 2011
  * Make _index a value in the Item for search results.

0.02 Jul 16 2011
  * Fix multiple facets not working

0.01    Date/time
        First version, released on an unsuspecting world.
