@@ -4,3 +4,6 @@ license = Perl_5
 copyright_holder= Cold Hard Code, LLC
 
 [@GPHAT]
+
+[Prereqs]
+Data::SearchEngine = 0.26
