@@ -1,6 +1,7 @@
 Revision history for Data-SearchEngine-ElasticSearch
 
 {{$NEXT}}
+  * Use the debug and raw attributes of D:SE::Query
 
 0.04 Oct 21 2011
   * Include item in ElasticSearch.pm to prevent runtime errors.
